# cli

./: CMakeLists.txt  LICENSE  README.md  version.h.in
deprected/src/border/: buffer.h  element.h
deprected/src/layout/: horizontal_layout.h  layout.cc  layout.h  vertical_layout.cc
deprected/src/util/: alignment.h  attribute.h  color.h  line.h  permanence.h  point.cc  point.h  properties.cc  properties.h  size.cc  size_constraint.h  size_hint.cc  size_hint.h  stream_command.cc  stream_command.h
deprected/src/widget/: log_view.cc  log_view.h  text_view.h
deprected/tests/: testUtils.cc  testUtils.h  unitTest_log_view.cc  unitTests.h  unit_test_stream_command.cc
include/: CommandLineWindow.h  border.h  cliwindow.h  commands.h  data.h  hlayout.h  inputmultiplexer.h  layout.h  layoutobject.h  line.h  terminal.h  util.h  view.h  vlayout.h  window.h
src/: border.cc  cliwindow.cc  commands.cc  data.cc  hlayout.cc  inputmultiplexer.cc  layout.cc  layoutobject.cc  line.cc  util.cc  view.cc  vlayout.cc  window.cc
src/border/: buffer.cc  element.cc
src/cli/: char_sequence.h  delimiter.h  encoding_size.h  output_stream.h  parameter_sequence.h  serialise.h  serialize.h  types.h  version.h  vt102.h
src/cli/layout/: horizontal.h  object.h  size_hint.h
src/layout/: horizontal_layout.cc  layout_object.cc  layout_object.h  vertical_layout.h
src/terminal/: terminal_inerface.h
src/util/: alignment.h  line.h  point.h  properties.cc  properties.h  size.h  size_constraint.cc
src/widget/: text_view.h
test/: output_stream.cc  parameter_sequence.cc  serialise.cc  serialize.cc  types.cc  util.h  version.cc  vt102.cc
test/layout/: horizontal.cc  object.cc  size_hint.cc
tests/: cliwindowTest.cc  constraintTest.cc  dataTest.cc  layoutTest.cc  lineTest.cc  runUnitTests.cc  test.cc  testUtils.cc  testUtils.h  unitTest_TextWidget.cc  unitTest_border.cc  unitTest_layout.cc  unitTests.cc  unitTests.h
tool/: version_writer.sh
unused/: cliwindow.h  data.cc  data.h  dataTest.cc  inputTest.cc  layoutTest.cc  line.cc  terminalTest.cc  test.cc  unitTestData.cc  unitTestLine.cc  unitTestWindow.cc  view.cc  viewTest.cc
